src/objects/AACR_Session__c.object
<CustomObject>
    <description>A singular event session</description>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date of session</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of session</description>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>((End_Time__c -  Start_Time__c)/1000)/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Embed_URL__c</fullName>
        <label>Embed URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>End time of session</description>
        <label>End Time</label>
        <required>true</required>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Event session is for</description>
        <label>Event</label>
        <referenceTo>BR_Event__c</referenceTo>
        <relationshipName>Sessions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portal_Description__c</fullName>
        <label>Portal Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Session_DateTime__c</fullName>
        <formula>DATETIMEVALUE(TEXT(YEAR( DATEVALUE(Event__r.Start_Date__c) )) + &quot;-&quot; + TEXT(MONTH(DATEVALUE(Event__r.Start_Date__c))) + &quot;-&quot; + TEXT(DAY(DATEVALUE(Event__r.Start_Date__c)))+&quot; &quot;+TEXT(VALUE(LEFT(TEXT(Start_Time__c), 2)))+  MID(TEXT(Start_Time__c),3,3)+&quot;:00&quot;)</formula>
        <label>Session DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Start time of session</description>
        <label>Start Time</label>
        <required>true</required>
        <type>Time</type>
    </fields>
    <label>Live! Session</label>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Live! Sessions</pluralLabel>
    <recordTypes>
        <fullName>Default_Session</fullName>
        <active>true</active>
        <description>Standard session</description>
        <label>Default Session</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Session_Date_Time</fullName>
        <active>false</active>
        <description>Session must within event dates/times</description>
        <errorConditionFormula>TIMEVALUE( Session_DateTime__c ) &lt;  TIMEVALUE( Event__r.Start_Date__c )</errorConditionFormula>
        <errorMessage>The session must within the event. Please check all times are correct.</errorMessage>
    </validationRules>
</CustomObject>